# gary

./: .gitignore  README.md  pyproject.toml  resume_tailoring_guidelines.txt
src/gary/: config.py  crew.py  exceptions.py  load_data.py  main.py  models.py
src/gary/config/: agents.yaml  tasks.yaml
src/gary/tools/: __init__.py  resume_word_doc_tool.py  word_resume_generator.py
src/gary/utils/: clean_job_description.py  file_operations.py  google_sheets.py  job_description_cleaner.py  read_json.py  result_parser.py  resume_word_doc_generator.py
templates/: resume_word_template.docx
