[project]
name = "gary"
version = "0.1.0"
description = "gary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "docxtpl>=0.20.1",
    "email-validator>=2.3.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "python-docx>=1.2.0",
]

[project.scripts]
gary = "gary.main:run"
run_crew = "gary.main:run"
train = "gary.main:train"
replay = "gary.main:replay"
test = "gary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
